--- a/.github/workflows/release_command.yml
+++ b/.github/workflows/release_command.yml
@@ -6,14 +6,15 @@ jobs:
   release:
     runs-on: ubuntu-latest
     env:
-      PR: ${{ github.event.client_payload.pull_request }}
-    if: ${{ PR.mergeble }}
+      PR: ${{ toJson(github.event.client_payload.pull_request) }}
+    #if: ${{ PR.mergeble }}
     steps:
       - uses: actions/checkout@v2
         with:
           ref: r2++
       - name: Cherry pick commits
         run: |
+          echo "$PR"
           git config --global user.email "$GITBOT_EMAIL"
           git config --global user.name "$GITHUB_ACTOR"
           git fetch
