--- a/.github/workflows/release_command.yml
+++ b/.github/workflows/release_command.yml
@@ -11,25 +11,20 @@ jobs:
         with:
           ref: r2++
       - name: Cherry pick commits
-        env:
-          PR: ${{ toJson(github.event.client_payload.pull_request) }}
         run: |
-          echo "$PR"
           git config --global user.email "$GITBOT_EMAIL"
           git config --global user.name "$GITHUB_ACTOR"
           git fetch
-          git log ${{ PR.base.ref }}..${{ PR.head.ref }} | git cherry-pick --stdin
+          git log ${{ github.event.client_payload.pull_request.base.ref }}..${{ github.event.client_payload.pull_request.head.ref }} | git cherry-pick --stdin
       - name: Create PR
         id: cpr
-        env:
-          PR: ${{ toJson(github.event.client_payload.pull_request) }}
         uses: peter-evans/create-pull-request
         with:
           token: ${{ secrets.REPO_PAT }}
-          commit-message: "release(#${{ PR.number }}):${{ PR.title }}"
-          branch: release-${{ PR.number }}
-          title: Relase -- ${{ PR.title }}
-          body: Applying commits from PR#${{ PR.number }}
+          commit-message: release(#${{ github.event.client_payload.pull_request.number }}):${{ github.event.client_payload.pull_request.title }}
+          branch: release-${{ github.event.client_payload.pull_request.number }}
+          title: Relase -- ${{ github.event.client_payload.pull_request.title }}
+          body: Applying commits from PR#${{ github.event.client_payload.pull_request.number }}
 
 
 
