--- a/.github/workflows/release_command.yml
+++ b/.github/workflows/release_command.yml
@@ -6,6 +6,11 @@ jobs:
   release:
     runs-on: ubuntu-latest
     #if: ${{ PR.mergeble }}
+    env:
+      PR_BASE_SHA: ${{ github.event.client_payload.pull_request.base.sha }}
+      PR_HEAD_SHA: ${{ github.event.client_payload.pull_request.head.sha }}
+      PR_NUMBER: ${{ github.event.client_payload.pull_request.number }}
+      PR_TITLE: ${{ github.event.client_payload.pull_request.title }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -15,16 +20,16 @@ jobs:
           git config --global user.email "$GITBOT_EMAIL"
           git config --global user.name "$GITHUB_ACTOR"
           git fetch
-          git log ${{ github.event.client_payload.pull_request.base.ref }}..${{ github.event.client_payload.pull_request.head.ref }} | git cherry-pick --stdin
+          git log "$PR_BASE_SHA".."$PR_HEAD_SHA" | git cherry-pick --stdin
       - name: Create PR
         id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.REPO_PAT }}
-          commit-message: release(#${{ github.event.client_payload.pull_request.number }}):${{ github.event.client_payload.pull_request.title }}
-          branch: release-${{ github.event.client_payload.pull_request.number }}
-          title: Relase -- ${{ github.event.client_payload.pull_request.title }}
-          body: Applying commits from PR#${{ github.event.client_payload.pull_request.number }}
+          commit-message: 'release(#"$PR_NUMBER"): "$PR_TITLE"'
+          branch: release-"$PR_NUMBER"
+          title: Relase -- "$PR_TITLE"
+          body: Applying commits from PR#"$PR_NUMBER"
 
 
 
