--- a/.github/workflows/release_command.yml
+++ b/.github/workflows/release_command.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     #if: ${{ PR.mergeble }}
     env:
-      PR_BASE: ${{ github.event.client_payload.pull_request.base.sha }}
-      PR_HEAD: ${{ github.event.client_payload.pull_request.head.sha }}
+      PR_BASE: ${{ github.event.client_payload.pull_request.base.ref }}
+      PR_HEAD: ${{ github.event.client_payload.pull_request.head.ref }}
       PR_NUMBER: ${{ github.event.client_payload.pull_request.number }}
       PR_TITLE: ${{ github.event.client_payload.pull_request.title }}
     steps:
