--- a/.github/workflows/release_command.yml
+++ b/.github/workflows/release_command.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          submodules: true
           ref: r2++
       - name: Cherry pick commits
         run: |
