--- a/.github/workflows/release_command.yml
+++ b/.github/workflows/release_command.yml
@@ -36,8 +36,8 @@ jobs:
         with:
           script: |
             return github.pulls.merge({
-              owner: ${{ github.event.client_payload.pull_request.repo.owner.login }},
-              repo: ${{ github.event.client_payload.pull_request.repo.name }},
+              owner: context.repo.owner,
+              repo: context.repo.repo,
               pull_number: ${{ steps.cpr.outputs.pull-request-number }}
             })
       - name: Merge PR
@@ -47,8 +47,7 @@ jobs:
         with:
           script: |
             return github.pulls.merge({
-              owner: ${{ github.event.client_payload.pull_request.repo.owner.login }},
-              repo: ${{ github.event.client_payload.pull_request.repo.name }},
-              pull_number: ${{ github.event.client_payload.pull_request.number }}
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.client_payload.pull_request.number
             })
-            
