--- a/.github/workflows/release_command.yml
+++ b/.github/workflows/release_command.yml
@@ -35,18 +35,19 @@ jobs:
         id: mr
         with:
           script: |
-            return github.pulls.merge({
+            github.pulls.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: ${{ steps.cpr.outputs.pull-request-number }}
             })
+
       - name: Merge PR
         uses: actions/github-script@v3
         id: mp
-        if: ${{ steps.mr.outputs.merged }}
+        if: ${{ steps.mr.outputs.result.merged }}
         with:
           script: |
-            return github.pulls.merge({
+            github.pulls.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.payload.client_payload.pull_request.number
