fix(actions): add debug to merge release

--- a/.github/workflows/release_command.yml
+++ b/.github/workflows/release_command.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/github-script@v3
         id: mr
         with:
+          debug: true
           script: |
             github.pulls.merge({
               owner: context.repo.owner,
