--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,6 +11,8 @@ env:
   PERSIST: docker run --shm-size 1G --name tmppilot tmppilot /bin/sh -c
   CI_RUN: docker run -e GITHUB_ACTION -e GITHUB_REF -e GITHUB_HEAD_REF -e GITHUB_SHA -e GITHUB_REPOSITORY -e GITHUB_RUN_ID --rm tmppilotci /bin/bash -c
   UNIT_TEST: coverage run --append -m unittest discover
+  REPO: jamcar23/openpilot
+  REGISTRY_BASE: ghcr.io
   BUILD: |
       # build the openpilot docker base image
       # docker pull $(grep -ioP '(?<=^from)\s+\S+' Dockerfile.openpilot_base) || true
@@ -22,6 +24,14 @@ env:
       docker build -t tmppilot -f Dockerfile.openpilotci .
 
 jobs:
+  setup_workflow:
+    name: setup workflow
+    runs-on: ubuntu-20.04
+    timeout-minutes: 10
+    steps:
+      - name: Check for default repo
+        run: echo "::set-output name=is_default_repo::${{github.repository == env.REPO}}"
+
   build_release:
     name: build release
     runs-on: ubuntu-20.04
@@ -104,8 +114,8 @@ jobs:
     name: docker push
     runs-on: ubuntu-20.04
     timeout-minutes: 50
-    if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request' && github.repository == 'commaai/openpilot'
-    needs: static_analysis # hack to ensure slow tests run first since this and static_analysis are fast
+    needs: [setup_workflow, static_analysis] # hack to ensure slow tests run first since this and static_analysis are fast
+    if: github.ref == 'refs/heads/src' && github.event_name == 'push' && needs.setup_workflow.outputs.is_default_repo 
     steps:
       - uses: actions/checkout@v2
         with:
@@ -114,18 +124,18 @@ jobs:
         run: eval "$BUILD"
       - name: Push to dockerhub
         run: |
-          docker login -u wmelching -p ${{ secrets.COMMA_DOCKERHUB_TOKEN}}
-          docker tag commaai/openpilot-base:latest docker.io/commaai/openpilot-base:latest
-          docker push docker.io/commaai/openpilot-base:latest
-          docker tag tmppilot docker.io/commaai/openpilotci:latest
-          docker push docker.io/commaai/openpilotci:latest
+          docker login ${{ env.REGISTRY_BASE }} -u jamcar23 -p ${{ secrets.GITHUB_TOKEN }}
+          docker tag ${{ env.REPO }}-base:latest ${{ env.REGISTRY_BASE }}/${{ env.REPO }}-base:latest
+          docker push ${{ env.REGISTRY_BASE }}/${{ env.REPO }}-base:latest
+          docker tag tmppilot ${{ env.REGISTRY_BASE }}/${{ env.REPO }}ci:latest
+          docker push ${{ env.REGISTRY_BASE }}/${{ env.REPO }}ci:latest
 
   docker_push_prebuilt:
     name: docker push prebuilt
     runs-on: ubuntu-20.04
     timeout-minutes: 50
-    if: github.event_name == 'status' && github.repository == 'commaai/openpilot'
-    needs: [static_analysis, unit_tests, process_replay, test_longitudinal, test_car_models]
+    needs: [setup_workflow, static_analysis, unit_tests, process_replay, test_longitudinal, test_car_models]
+    if: github.ref == 'refs/heads/src' && github.event_name == 'push' && needs.setup_workflow.outputs.is_default_repo 
     steps:
       - uses: actions/checkout@v2
         with:
@@ -134,9 +144,9 @@ jobs:
         run: echo "RUN cd /tmp/openpilot && scons -c && scons -j\$(nproc)" >> Dockerfile.openpilotci && eval "$BUILD"
       - name: Push to dockerhub
         run: |
-          docker login -u wmelching -p ${{ secrets.COMMA_DOCKERHUB_TOKEN}}
-          docker tag tmppilot docker.io/commaai/openpilot:latest
-          docker push docker.io/commaai/openpilot:latest
+          docker login ${{ env.REGISTRY_BASE }} -u jamcar23 -p ${{ secrets.GITHUB_TOKEN }}
+          docker tag tmppilot ${{ env.REGISTRY_BASE }}/${{ env.REPO }}:latest
+          docker push ${{ env.REGISTRY_BASE }}/${{ env.REPO }}:latest
 
   static_analysis:
     name: static analysis
