--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -145,7 +145,7 @@ jobs:
           submodules: true
       - name: Build Docker image
         run: eval "$BUILD"
-      - name: Push to dockerhub
+      - name: Push to container registry
         run: |
           eval "$LOGIN ${{ secrets.PACKAGE_PAT }}"
           docker tag ${{ env.REPO }}-base:latest ${{ env.URI }}-base:latest
@@ -165,6 +165,8 @@ jobs:
     if: github.event_name == 'push' && needs.setup_workflow.outputs.is_default_repo && needs.setup_workflow.outputs.is_main_branch
     env:
       URI: ${{ needs.setup_workflow.outputs.container_uri }}
+      LOGIN: ${{ needs.setup_workflow.outputs.docker_login }}
+      BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -173,9 +175,13 @@ jobs:
         run: echo "RUN cd /tmp/openpilot && scons -c && scons -j\$(nproc)" >> Dockerfile.openpilotci && eval "$BUILD"
       - name: Push to dockerhub
         run: |
-          docker login $REGISTRY_BASE -u jamcar23 -p ${{ secrets.GITHUB_TOKEN }}
-          docker tag tmppilot ${{ env.REGISTRY_BASE }}/${{ env.REPO }}:latest
-          docker push ${{ env.REGISTRY_BASE }}/${{ env.REPO }}:latest
+          eval "$LOGIN ${{ secrets.PACKAGE_PAT }}"
+          docker tag tmppilot ${{ env.CONTAINER_URI }}:latest
+          docker push ${{ env.CONTAINER_URI }}:latest
+      - name: Docker Logout
+        if: always()
+        continue-on-error: true
+        run: docker logout
 
   static_analysis:
     name: static analysis
