--- a/Dockerfile.openpilotci
+++ b/Dockerfile.openpilotci
@@ -1,4 +1,4 @@
-FROM commaai/openpilot-base:latest
+FROM ghcr.io/jamcar23/openpilot/openpilot-base:latest
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONPATH /tmp/openpilot:${PYTHONPATH}
