--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,22 +14,9 @@ on:
 env:
   REPO: jamcar23/openpilot
   REGISTRY_BASE: ghcr.io
-  CONTAINER_URI: $REGISTRY_BASE/$REPO/openpilot
   MAIN_BRANCH: src
-  RUN: docker run --shm-size 1G --rm tmppilot /bin/sh -c
-  PERSIST_WITH_CACHE: docker run --shm-size 1G -v /tmp/comma_download_cache:/tmp/comma_download_cache  --name tmppilot tmppilot /bin/sh -c
-  PERSIST: docker run --shm-size 1G --name tmppilot tmppilot /bin/sh -c
-  CI_RUN: docker run -e GITHUB_ACTION -e GITHUB_REF -e GITHUB_HEAD_REF -e GITHUB_SHA -e GITHUB_REPOSITORY -e GITHUB_RUN_ID --rm tmppilotci /bin/bash -c
+  TEMP_IMAGE: tmppilotci
   UNIT_TEST: coverage run --append -m unittest discover
-  BUILD: |
-      # build the openpilot docker base image
-      # docker pull $(grep -ioP '(?<=^from)\s+\S+' Dockerfile.openpilot_base) || true
-      # docker pull docker.io/commaai/openpilot-base:latest || true
-      docker build -t $REPO-base:latest -f Dockerfile.openpilot_base .
-
-      # build the final CI image
-      # docker pull docker.io/commaai/openpilotci:latest || true
-      docker build -t tmppilot -f Dockerfile.openpilotci .
 
 jobs:
   setup_workflow:
@@ -41,8 +28,13 @@ jobs:
       is_main_branch: ${{ env.IS_MAIN }}
       should_build_docker: ${{ env.SHOULD_BUILD_DOCKER }}
       container_uri: ${{ env.URI }}
-      docker_login: docker login ${{ env.REGISTRY_BASE }} -u jamcar23 -p 
+      base_image: ${{ env.BASE_IMAGE }}
+      ci_image: ${{ env.CI_IMAGE }}
+      fat_image: ${{ env.FAT_IMAGE }}
+      docker_image: ${{ env.MAIN_IMAGE }}
       docker_build: ${{ env.BUILD_CMD }}
+      docker_run: ${{ env.RUN_CMD }}
+      docker_login: docker login ${{ env.REGISTRY_BASE }} -u jamcar23 -p 
     steps:
       - name: Set default repo
         # `&& true || ''` is a fake ternary op that actually evals to true and false
@@ -56,18 +48,27 @@ jobs:
       - name: Set container uri
         run: |
           echo "URI=${{ env.REGISTRY_BASE }}/${{ env.REPO }}/openpilot" >> $GITHUB_ENV
+      - name: Set image uris
+        run: |
+          echo "BASE_IMAGE=${{ env.URI }}-base:latest" >> $GITHUB_ENV
+          echo "CI_IMAGE=${{ env.URI }}ci:latest" >> $GITHUB_ENV
+          echo "FAT_IMAGE=${{ env.URI }}-fat:latest" >> $GITHUB_ENV
       - name: Set should build docker
         run: |
           echo "SHOULD_BUILD_DOCKER=${{ github.event_name == 'push' && env.IS_DEFAULT && env.IS_MAIN && true || '' }}" >> $GITHUB_ENV
-      - name: Create docker_build command main branch
-        id: db_main_branch
+      - name: Create docker commands main branch
+        id: docker_main_branch
         if: env.SHOULD_BUILD_DOCKER
         run: |
-          echo "BUILD_CMD=docker build -t ${{ env.REPO }}-base:latest -f Dockerfile.openpilot_base . && docker build -t tmppilot -f Dockerfile.openpilotci . && docker build -t ${{ env.REPO }}-fat:latest -f Dockerfile.openpilot_fat ." >> $GITHUB_ENV
-      - name: Create docker_build command other branch
-        if: steps.db_main_branch.outcome != 'success'
+          echo "MAIN_IMAGE=${{ env.FAT_IMAGE }}" >> $GITHUB_ENV
+          echo "BUILD_CMD=docker build -t ${{ env.BASE_IMAGE }} -f Dockerfile.openpilot_base . && docker build -t ${{ env.CI_IMAGE }} -f Dockerfile.openpilotci . && docker build -t ${{ env.FAT_IMAGE }} -f Dockerfile.openpilot_fat ." >> $GITHUB_ENV
+          echo "RUN_CMD=docker run --shm-size 1G -e PYTHONPATH=/tmp/openpilot -e GITHUB_ACTION -e GITHUB_REF -e GITHUB_HEAD_REF -e GITHUB_SHA -e GITHUB_REPOSITORY -e GITHUB_RUN_ID -v /tmp/comma_download_cache:/tmp/comma_download_cache --name ${{ env.TEMP_IMAGE }} \$IMAGE /bin/sh -c" >> $GITHUB_ENV
+      - name: Create docker commands other branch
+        if: steps.docker_main_branch.outcome != 'success'
         run: |
-          echo "BUILD_CMD=docker pull ${{ env.URI }}ci:latest && docker tag ${{ env.URI }}ci tmppilot" >> $GITHUB_ENV
+          echo "MAIN_IMAGE=${{ env.CI_IMAGE }}" >> $GITHUB_ENV
+          echo "BUILD_CMD=docker pull \$IMAGE" >> $GITHUB_ENV
+          echo "RUN_CMD=docker run --rm --shm-size 1G -v $PWD:/tmp/openpilot -e PYTHONPATH=/tmp/openpilot -e GITHUB_ACTION -e GITHUB_REF -e GITHUB_HEAD_REF -e GITHUB_SHA -e GITHUB_REPOSITORY -e GITHUB_RUN_ID -v /tmp/comma_download_cache:/tmp/comma_download_cache \$IMAGE /bin/sh -c" >> $GITHUB_ENV
       - name: Finish setup # At least one step is needed so just log that we're done
         run: echo "Finished workflow setup"
 
@@ -79,6 +80,8 @@ jobs:
     env:
       TEST_DIR: tmppilot
       BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
+      IMAGE: ${{ needs.setup_workflow.outputs.docker_image }}
+      RUN: ${{ needs.setup_workflow.outputs.docker_run }}
     steps:
     - uses: actions/checkout@v2
       with:
@@ -98,12 +101,13 @@ jobs:
         cd $TEST_DIR
         mkdir laika laika_repo tools
     - name: Build Docker image
-      run: cd $TEST_DIR && eval "$BUILD"
+      run: eval "$BUILD"
     - name: Build openpilot and run quick check
       run: |
-          $RUN "cd /tmp/openpilot && \
-                scons -j$(nproc) && \
-                $UNIT_TEST selfdrive/car"
+          cd $TEST_DIR
+          ${{ env.RUN }} "cd /tmp/openpilot && \
+                          scons -j$(nproc) && \
+                          $UNIT_TEST selfdrive/car"
 
   build_mac:
     name: build macos
@@ -158,9 +162,11 @@ jobs:
     needs: [setup_workflow, static_analysis] # hack to ensure slow tests run first since this and static_analysis are fast
     if: needs.setup_workflow.outputs.should_build_docker
     env:
-      URI: ${{ needs.setup_workflow.outputs.container_uri }}
       LOGIN: ${{ needs.setup_workflow.outputs.docker_login }}
       BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
+      BASE_IMAGE: ${{ needs.setup_workflow.outputs.base_image }}
+      CI_IMAGE: ${{ needs.setup_workflow.outputs.ci_image }}
+      FAT_IMAGE: ${{ needs.setup_workflow.outputs.fat_image }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -171,12 +177,9 @@ jobs:
       - name: Push to container registry
         run: |
           eval "$LOGIN ${{ secrets.PACKAGE_PAT }}"
-          docker tag ${{ env.REPO }}-base:latest ${{ env.URI }}-base:latest
-          docker push ${{ env.CONTAINER_URI }}-base:latest
-          docker tag tmppilot ${{ env.CONTAINER_URI}}ci:latest
-          docker push ${{ env.CONTAINER_URI }}ci:latest
-          docker tag ${{ env.REPO }}-fat:latest ${{ env.URI }}-fat:latest
-          docker push ${{ env.CONTAINER_URI }}-fat:latest
+          docker push ${{ env.BASE_IMAGE }}
+          docker push ${{ env.CI_IMAGE }}
+          docker push ${{ env.FAT_IMAGE }}
       - name: Docker Logout
         if: always()
         continue-on-error: true
@@ -192,6 +195,7 @@ jobs:
       URI: ${{ needs.setup_workflow.outputs.container_uri }}
       LOGIN: ${{ needs.setup_workflow.outputs.docker_login }}
       BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
+      FAT_IMAGE: ${{ needs.setup_workflow.outputs.fat_image }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -202,8 +206,8 @@ jobs:
       - name: Push to container registry
         run: |
           eval "$LOGIN ${{ secrets.PACKAGE_PAT }}"
-          docker tag tmppilot ${{ env.CONTAINER_URI }}:latest
-          docker push ${{ env.CONTAINER_URI }}:latest
+          docker tag ${{ env.FAT_IMAGE }} ${{ env.URI }}:latest
+          docker push ${{ env.URI }}:latest
       - name: Docker Logout
         if: always()
         continue-on-error: true
@@ -216,6 +220,8 @@ jobs:
     needs: setup_workflow
     env:
       BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
+      IMAGE: ${{ needs.setup_workflow.outputs.docker_image }}
+      RUN: ${{ needs.setup_workflow.outputs.docker_run }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -223,7 +229,7 @@ jobs:
       - name: Build Docker image
         run: eval "$BUILD"
       - name: pre-commit
-        run: $RUN "cd /tmp/openpilot/ && git init && git add -A && pre-commit run --all"
+        run: ${{ env.RUN }} "cd /tmp/openpilot/ && git init && git add -A && pre-commit run --all"
 
   valgrind:
     name: valgrind
@@ -231,7 +237,10 @@ jobs:
     timeout-minutes: 50
     needs: setup_workflow
     env:
+      LOG_FILE_PATH: selfdrive/test/valgrind_logs.txt
       BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
+      IMAGE: ${{ needs.setup_workflow.outputs.docker_image }}
+      RUN: ${{ needs.setup_workflow.outputs.docker_run }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -247,20 +256,23 @@ jobs:
         run: eval "$BUILD"
       - name: Run valgrind
         run: |
-          $PERSIST_WITH_CACHE "cd /tmp/openpilot && \
-                    scons -j$(nproc) && \
-                    FILEREADER_CACHE=1 python selfdrive/test/test_valgrind_replay.py"
+          ${{ env.RUN }} "cd /tmp/openpilot && \
+                          scons -j$(nproc) && \
+                          FILEREADER_CACHE=1 python selfdrive/test/test_valgrind_replay.py"
+      - name: Copy logs
+        if: needs.setup_workflow.outputs.should_build_docker
+        run: |
+          docker cp ${{ env.TEMP_IMAGE }}:/tmp/openpilot/${{ env.LOG_FILE_PATH }} ${{ env.LOG_FILE_PATH }}
       - name: Print logs
         if: always()
         run: |
-          docker cp tmppilot:/tmp/openpilot/selfdrive/test/valgrind_logs.txt valgrind_logs.txt
-          cat valgrind_logs.txt
+          cat ${{ env.LOG_FILE_PATH }}
       - uses: actions/upload-artifact@v2
         if: always()
         continue-on-error: true
         with:
           name: valgrind_logs.txt
-          path: valgrind_logs.txt
+          path: ${{ env.LOG_FILE_PATH }}
 
   unit_tests:
     name: unit tests
@@ -269,6 +281,8 @@ jobs:
     needs: setup_workflow
     env:
       BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
+      IMAGE: ${{ needs.setup_workflow.outputs.docker_image }}
+      RUN: ${{ needs.setup_workflow.outputs.docker_run }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -277,24 +291,24 @@ jobs:
         run: eval "$BUILD"
       - name: Run unit tests
         run: |
-          $PERSIST "cd /tmp/openpilot && \
-                    scons -j$(nproc) && \
-                    coverage run selfdrive/test/test_fingerprints.py && \
-                    $UNIT_TEST common && \
-                    $UNIT_TEST opendbc/can && \
-                    $UNIT_TEST selfdrive/boardd && \
-                    $UNIT_TEST selfdrive/controls && \
-                    $UNIT_TEST selfdrive/monitoring && \
-                    $UNIT_TEST selfdrive/loggerd && \
-                    $UNIT_TEST selfdrive/car && \
-                    $UNIT_TEST selfdrive/locationd && \
-                    $UNIT_TEST selfdrive/athena && \
-                    $UNIT_TEST selfdrive/thermald && \
-                    $UNIT_TEST tools/lib/tests"
-      - name: Upload coverage to Codecov
-        run: |
-          docker commit tmppilot tmppilotci
-          $CI_RUN "cd /tmp/openpilot && bash <(curl -s https://codecov.io/bash) -v -F unit_tests"
+          ${{ env.RUN }} "cd /tmp/openpilot && \
+                          scons -j$(nproc) && \
+                          coverage run selfdrive/test/test_fingerprints.py && \
+                          $UNIT_TEST common && \
+                          $UNIT_TEST opendbc/can && \
+                          $UNIT_TEST selfdrive/boardd && \
+                          $UNIT_TEST selfdrive/controls && \
+                          $UNIT_TEST selfdrive/monitoring && \
+                          $UNIT_TEST selfdrive/loggerd && \
+                          $UNIT_TEST selfdrive/car && \
+                          $UNIT_TEST selfdrive/locationd && \
+                          $UNIT_TEST selfdrive/athena && \
+                          $UNIT_TEST selfdrive/thermald && \
+                          $UNIT_TEST tools/lib/tests"
+      # - name: Upload coverage to Codecov
+      #   run: |
+      #     docker commit tmppilot tmppilotci
+      #     $CI_RUN "cd /tmp/openpilot && bash <(curl -s https://codecov.io/bash) -v -F unit_tests"
 
   process_replay:
     name: process replay
@@ -302,7 +316,10 @@ jobs:
     timeout-minutes: 50
     needs: setup_workflow
     env:
+      LOG_FILE_PATH: selfdrive/test/process_replay/diff.txt
       BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
+      IMAGE: ${{ needs.setup_workflow.outputs.docker_image }}
+      RUN: ${{ needs.setup_workflow.outputs.docker_run }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -319,24 +336,27 @@ jobs:
         run: eval "$BUILD"
       - name: Run replay
         run: |
-          $PERSIST_WITH_CACHE  "cd /tmp/openpilot && \
-          scons -j$(nproc) && \
-          FILEREADER_CACHE=1 CI=1 coverage run selfdrive/test/process_replay/test_processes.py --local"
-      - name: Upload coverage to Codecov
+          ${{ env.RUN }} "cd /tmp/openpilot && \
+                          scons -j$(nproc) && \
+                          FILEREADER_CACHE=1 CI=1 coverage run selfdrive/test/process_replay/test_processes.py --local"
+      # - name: Upload coverage to Codecov
+      #   run: |
+      #     docker commit tmppilot tmppilotci
+      #     $CI_RUN "cd /tmp/openpilot && bash <(curl -s https://codecov.io/bash) -v -F process_replay"
+      - name: Copy logs
+        if: needs.setup_workflow.outputs.should_build_docker
         run: |
-          docker commit tmppilot tmppilotci
-          $CI_RUN "cd /tmp/openpilot && bash <(curl -s https://codecov.io/bash) -v -F process_replay"
+          docker cp ${{ env.TEMP_IMAGE }}:/tmp/openpilot/${{ env.LOG_FILE_PATH }} ${{ env.LOG_FILE_PATH }}
       - name: Print diff
         if: always()
         run: |
-          docker cp tmppilot:/tmp/openpilot/selfdrive/test/process_replay/diff.txt diff.txt
-          cat diff.txt
+          cat ${{ env.LOG_FILE_PATH }}
       - uses: actions/upload-artifact@v2
         if: always()
         continue-on-error: true
         with:
           name: process_replay_diff.txt
-          path: diff.txt
+          path: ${{ env.LOG_FILE_PATH }}
 
   test_longitudinal:
     name: longitudinal
@@ -344,7 +364,10 @@ jobs:
     timeout-minutes: 50
     needs: setup_workflow
     env:
+      LOG_PATH: selfdrive/test/longitudinal_maneuvers/out/longitudinal/
       BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
+      IMAGE: ${{ needs.setup_workflow.outputs.docker_image }}
+      RUN: ${{ needs.setup_workflow.outputs.docker_run }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -353,22 +376,22 @@ jobs:
         run: eval "$BUILD"
       - name: Test longitudinal
         run: |
-          $PERSIST "mkdir -p /tmp/openpilot/selfdrive/test/out && \
-                    cd /tmp/openpilot/ && \
-                    scons -j$(nproc) && \
-                    cd selfdrive/test/longitudinal_maneuvers && \
-                    OPTEST=1 ./test_longitudinal.py"
+          ${{ env.RUN }} "mkdir -p /tmp/openpilot/selfdrive/test/out && \
+                          cd /tmp/openpilot/ && \
+                          scons -j$(nproc) && \
+                          cd selfdrive/test/longitudinal_maneuvers && \
+                          OPTEST=1 ./test_longitudinal.py"
       - name: Copy artifacts
-        if: always()
+        if: needs.setup_workflow.outputs.should_build_docker
         run: |
-          mkdir out
-          docker cp tmppilot:/tmp/openpilot/selfdrive/test/longitudinal_maneuvers/out/longitudinal/ out/
+          mkdir -p ${{ env.LOG_PATH }}
+          docker cp ${{ env.TEMP_IMAGE }}:/tmp/openpilot/${{ env.LOG_PATH }} ${{ env.LOG_PATH }}
       - uses: actions/upload-artifact@v2
         if: always()
         continue-on-error: true
         with:
           name: longitudinal
-          path: out
+          path: ${{ env.LOG_PATH }}
 
   test_car_models:
     name: test car models
@@ -377,6 +400,8 @@ jobs:
     needs: setup_workflow
     env:
       BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
+      IMAGE: ${{ needs.setup_workflow.outputs.docker_image }}
+      RUN: ${{ needs.setup_workflow.outputs.docker_run }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -392,26 +417,25 @@ jobs:
         run: eval "$BUILD"
       - name: Test car models
         run: |
-          $PERSIST_WITH_CACHE "cd /tmp/openpilot && \
+          ${{ env.RUN }} "cd /tmp/openpilot && \
                     scons -j$(nproc) && \
                     FILEREADER_CACHE=1 coverage run --parallel-mode -m nose --processes=4 --process-timeout=60 \
                                  selfdrive/test/test_models.py && \
                     coverage combine"
-      - name: Upload coverage to Codecov
-        run: |
-          docker commit tmppilot tmppilotci
-          $CI_RUN "cd /tmp/openpilot && bash <(curl -s https://codecov.io/bash) -v -F test_car_models"
+      # - name: Upload coverage to Codecov
+      #   run: |
+      #     docker commit tmppilot tmppilotci
+      #     $CI_RUN "cd /tmp/openpilot && bash <(curl -s https://codecov.io/bash) -v -F test_car_models"
 
   github_push_prebuilt:
     name: github push prebuilt
     runs-on: ubuntu-20.04
     timeout-minutes: 50
-    if: github.repository == 'jamcar23/openpilot'
     needs: [setup_workflow, static_analysis, unit_tests, process_replay, test_longitudinal, test_car_models]
+    if: needs.setup_workflow.outputs.is_default_repo
     env:
       BRANCH: ''
       TARGET_DIR: tmp_op_ci
-      BUILD: ${{ needs.setup_workflow.outputs.docker_build }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -419,12 +443,12 @@ jobs:
           lfs: true
       - name: Prepare PR CI Build
         id: ci_build
-        if: github.ref != 'refs/heads/src' && github.event_name == 'pull_request'
+        if: needs.setup_workflow.outputs.is_main_branch == '' && github.event_name == 'pull_request'
         run: |
           echo "BRANCH=${{ github.head_ref }}-ci" >> $GITHUB_ENV
       - name: Prepare Release CI Build
         id: r2_build
-        if: github.ref == 'refs/heads/src' && github.event_name == 'push'
+        if: needs.setup_workflow.outputs.is_main_branch && github.event_name == 'push'
         run: |
           echo "BRANCH=r2++" >> $GITHUB_ENV
       - name: Prepare release files
